deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uber
  namespace: uber
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uber-strip-service-prefix@kubernetescrd
spec:
  tls:
    - hosts:
        - api.uber.johnmayou.com
      secretName: uber-tls
  rules:
    - host: api.uber.johnmayou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-service-prefix
  namespace: uber
spec:
  stripPrefixRegex:
    regex:
      - /[^/]+
